--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="container">
       <div class="to-do-list">
-        <h1>to-do-list</h1>
+        <h1>Seamless TODO -List</h1>
         <div class="row">
           <input id="input" type="text" placeholder="type" />
-          <button id="btn" onclick="addtask()">Add</button>
+          <button id="btn" onclick="addtask()">Add </button>
         </div>
         <ul id="list-container">
           <!-- <li class="checked">task1</li>
