--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="to-do-list">
         <h1>Seamless TODO -List</h1>
         <div class="row">
-          <input id="input" type="text" placeholder="type" />
+          <input id="input" type="text" placeholder="write please" />
           <button id="btn" onclick="addtask()">Add </button>
         </div>
         <ul id="list-container">
